--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -19,7 +19,7 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Copia os arquivos do backend para o Apache
 COPY . /var/www/html/
 
-# Ajusta permissões (opcional, se precisar rodar arquivos)
+# Ajusta permissões 
 RUN chown -R www-data:www-data /var/www/html
 
 # Expõe a porta 80 (usada pelo Apache)
